--- a/Project/output.css
+++ b/Project/output.css
@@ -562,16 +562,12 @@ video {
   left: -10px !important;
 }
 
-.left-\[-15px\] {
-  left: -15px !important;
-}
-
 .left-\[-5px\] {
   left: -5px !important;
 }
 
-.left-\[1px\] {
-  left: 1px !important;
+.left-\[10px\] {
+  left: 10px !important;
 }
 
 .left-\[24px\] {
@@ -584,6 +580,10 @@ video {
 
 .left-\[263px\] {
   left: 263px !important;
+}
+
+.left-\[33px\] {
+  left: 33px !important;
 }
 
 .right-\[-183px\] {
@@ -610,16 +610,16 @@ video {
   right: 29px !important;
 }
 
+.right-\[30px\] {
+  right: 30px !important;
+}
+
 .right-\[41px\] {
   right: 41px !important;
 }
 
 .right-\[50px\] {
   right: 50px !important;
-}
-
-.right-\[5px\] {
-  right: 5px !important;
 }
 
 .top-\[-110px\] {
@@ -682,40 +682,60 @@ video {
   top: 92px !important;
 }
 
-.left-\[10px\] {
-  left: 10px !important;
+.bottom-\[-11\.69px\] {
+  bottom: -11.69px !important;
 }
 
-.left-\[33px\] {
-  left: 33px !important;
+.bottom-\[-11\.68px\] {
+  bottom: -11.68px !important;
 }
 
-.right-\[33px\] {
-  right: 33px !important;
+.bottom-\[11\.68px\] {
+  bottom: 11.68px !important;
 }
 
-.right-\[24px\] {
-  right: 24px !important;
+.left-\[22px\] {
+  left: 22px !important;
 }
 
-.right-\[26px\] {
-  right: 26px !important;
+.left-\[20px\] {
+  left: 20px !important;
 }
 
-.right-\[28px\] {
-  right: 28px !important;
+.left-\[12px\] {
+  left: 12px !important;
 }
 
-.right-\[30px\] {
-  right: 30px !important;
+.left-\[8px\] {
+  left: 8px !important;
+}
+
+.right-\[px\] {
+  right: px !important;
+}
+
+.right-\[27px\] {
+  right: 27px !important;
+}
+
+.top-\[370px\] {
+  top: 370px !important;
+}
+
+.top-\[365px\] {
+  top: 365px !important;
+}
+
+.right-\[40px\] {
+  right: 40px !important;
+}
+
+.right-\[35px\] {
+  right: 35px !important;
 }
 
 .m-auto {
   margin: auto !important;
-}
-
-.m-\[-20px\] {
-  margin: -20px !important;
 }
 
 .mx-auto {
@@ -753,14 +773,6 @@ video {
 
 .mt-auto {
   margin-top: auto !important;
-}
-
-.mt-\[\] {
-  margin-top:  !important;
-}
-
-.mt-\[44\] {
-  margin-top: 44 !important;
 }
 
 .flex {
@@ -1164,42 +1176,6 @@ video {
   padding: 24px !important;
 }
 
-.p-8 {
-  padding: 2rem !important;
-}
-
-.p-2 {
-  padding: 0.5rem !important;
-}
-
-.p-4 {
-  padding: 1rem !important;
-}
-
-.p-10 {
-  padding: 2.5rem !important;
-}
-
-.p-\[\] {
-  padding:  !important;
-}
-
-.p-\[-20px\] {
-  padding: -20px !important;
-}
-
-.pl-10 {
-  padding-left: 2.5rem !important;
-}
-
-.pl-4 {
-  padding-left: 1rem !important;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem !important;
-}
-
 .pb-8 {
   padding-bottom: 2rem !important;
 }
@@ -1337,20 +1313,24 @@ video {
     margin-bottom: 50px !important;
   }
 
+  .sm\:mt-\[44px\] {
+    margin-top: 44px !important;
+  }
+
   .sm\:mt-\[66px\] {
     margin-top: 66px !important;
   }
 
-  .sm\:mt-\[8px\] {
-    margin-top: 8px !important;
+  .sm\:mt-\[\] {
+    margin-top:  !important;
   }
 
-  .sm\:mt-\[44\] {
-    margin-top: 44 !important;
+  .sm\:mt-\[80px\] {
+    margin-top: 80px !important;
   }
 
-  .sm\:mt-\[44px\] {
-    margin-top: 44px !important;
+  .sm\:mb-\[80px\] {
+    margin-bottom: 80px !important;
   }
 
   .sm\:flex {
@@ -1411,31 +1391,6 @@ video {
 
   .sm\:rounded-none {
     border-radius: 0px !important;
-  }
-
-  .sm\:p-0 {
-    padding: 0px !important;
-  }
-
-  .sm\:p-4 {
-    padding: 1rem !important;
-  }
-
-  .sm\:p-\[\] {
-    padding:  !important;
-  }
-
-  .sm\:p-\[8px\] {
-    padding: 8px !important;
-  }
-
-  .sm\:p-8 {
-    padding: 2rem !important;
-  }
-
-  .sm\:px-8 {
-    padding-left: 2rem !important;
-    padding-right: 2rem !important;
   }
 
   .sm\:px-6 {
@@ -1715,10 +1670,6 @@ video {
 
   .md\:p-8 {
     padding: 2rem !important;
-  }
-
-  .md\:p-0 {
-    padding: 0px !important;
   }
 
   .md\:text-center {
